--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,9 @@ addons:
 # Environment
 env:
  global:
-  - VERILATOR_ROOT=$HOME/tools/verilator
-  - PATH=$VERILATOR_ROOT/bin:$PATH
+  - VERILATOR_ROOT=$TRAVIS_BUILD_DIR/tools/verilator
+  - RISCV=$TRAVIS_BUILD_DIR/riscv-tools-dir
+  - PATH=$VERILATOR_ROOT/bin:$PATH:$RISCV/bin
   - JOBS=4
 
 before_install:
@@ -40,25 +41,12 @@ before_install:
 install:
  - git clone -b $BRANCH_N $REPO --recursive $BRANCH_N
  - cd $BRANCH_N
- - source set_env.sh
  - cd riscv-tools/
- - bash build.sh
- - cd riscv-gnu-toolchain
- - cd build/
- - ../configure --prefix=$RISCV
- - make linux -j 4
+ - build.sh
 
 script:
  # Build RTL simulation
- - cd $TOP/vsim
- - make sim
- # Build RTL simulation with vcd
- - cd $TOP/vsim
- - make sim-debug
- # Run asm tests
- # Add . to PATH so that make finds it (will be changed)
- - export PATH=.:$PATH
- - make run-asm-tests
+ - cd ../emulator; make run CONFIG=BOOMConfig
 
 #before_install:
 #- docker pull carlad/sinatra
