--- a/.travis.yml
+++ b/.travis.yml
@@ -39,14 +39,16 @@ before_install:
 
 # Execute the build
 install:
- - git clone -b $BRANCH_N $REPO --recursive $BRANCH_N
+ - git clone -b $BRANCH_N $REPO $BRANCH_N
  - cd $BRANCH_N
- - cd riscv-tools/
+ - git submodule update --init
+ - cd riscv-tools
+ - git submodule update --init --recursive
  - bash build.sh
 
 script:
  # Build RTL simulation
- - cd ../emulator; make run CONFIG=BOOMConfig
+ # - cd ../emulator; make run CONFIG=BOOMConfig
 
 #before_install:
 #- docker pull carlad/sinatra
