--- a/.travis.yml
+++ b/.travis.yml
@@ -61,4 +61,4 @@ install:
 
 script:
  - mkdir -p $TRAVIS_BUILD_DIR/out
- - zip -r $TRAVIS_BUILD_DIR/out/riscv-tools-$BRANCH_N.zip $RISCV
+ - zip -r $TRAVIS_BUILD_DIR/out/riscv-tools-$BRANCH_N.zip $RISCV/*
