--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 
 language: scala
-scala: 2.11.2
+scala: 2.10.6
 
 services:
   - docker
@@ -33,7 +33,6 @@ env:
  global:
   - RISCV=$TRAVIS_BUILD_DIR/riscv-tools-$BRANCH_N
   - PATH=$VERILATOR_ROOT/bin:$PATH:$RISCV/bin
-  - JOBS=4
 
 before_install:
  - git submodule update --init --recursive
@@ -47,7 +46,7 @@ install:
  - cd $BRANCH_N
  - git submodule update --init
  - cd emulator
- - make run CONFIG=BOOMConfig
+ - make $VERILATOR_ROOT/generated-src/rocketchip.BOOMConfig.v CONFIG=BOOMConfig
  - cd ..
 
 #script:
