--- a/.travis.yml
+++ b/.travis.yml
@@ -40,18 +40,20 @@ before_install:
  - wget -q "https://s3.amazonaws.com/ci-build-test/ahmedkhalaf/CI-Test2/40/40.1/out/riscv-tools-boom.zip"
  - mkdir -p $RISCV
  - unzip riscv-tools-*.zip -d $RISCV > $TRAVIS_BUILD_DIR/out/unzip_riscv-tools.txt
- - wget -q "https://s3.amazonaws.com/ci-build-test/ahmedkhalaf/CI-Test2/48/48.1/out/emulator-boom.zip"
- - unzip emulator-boom.zip -d ./$BRANCH_N > $TRAVIS_BUILD_DIR/out/unzip_emulator.txt
+ - wget -q "https://s3.amazonaws.com/ci-build-test/ahmedkhalaf/CI-Test2/54/54.1/out/emulator-bin-boom.zip"
+ - unzip emulator-bin-boom.zip -d ./$BRANCH_N > $TRAVIS_BUILD_DIR/out/unzip_emulator-bin.txt
 
 # Execute the build
 install:
+# steps not needed because of incremental build are commented
 # - git clone -b $BRANCH_N $REPO $BRANCH_N
  - cd $BRANCH_N
 # - git submodule update --init
  - cd emulator
- - sed -i 's/clean:/verilog_only:$(verilog)\nclean:/g' Makefile
- - make verilog_only CONFIG=BOOMConfig -t
- - make all CONFIG=BOOMConfig
+# - sed -i 's/clean:/verilog_only:$(verilog)\nclean:/g' Makefile
+# - make verilog_only CONFIG=BOOMConfig -t
+ - make all CONFIG=BOOMConfig -t
+ - make run-fast CONFIG=BOOMConfig
  - cd ..
 
 #script:
@@ -65,4 +67,4 @@ install:
 #- docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
 
 script:
- - zip -r ../out/emulator-bin-$BRANCH_N.zip ./*  > $TRAVIS_BUILD_DIR/out/zip_emulator-run.txt
+ - zip -r ../out/emulator-run-$BRANCH_N.zip ./*  > $TRAVIS_BUILD_DIR/out/zip_emulator-run-$BRANCH_N.txt
