--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: required
 
-language: ruby
+language: scala
+scala: 2.10.6
 
 services:
   - docker
@@ -30,24 +31,29 @@ addons:
 # Environment
 env:
  global:
-  - VERILATOR_ROOT=$TRAVIS_BUILD_DIR/tools/verilator
+  - $BRANCH_N=ethernet-v0.5
   - RISCV=$TRAVIS_BUILD_DIR/riscv-tools-$BRANCH_N
-  - PATH=$VERILATOR_ROOT/bin:$PATH:$RISCV/bin
-  - JOBS=4
+  - PATH=$RISCV/bin:$PATH
 
 before_install:
+ - mkdir -p $TRAVIS_BUILD_DIR/out
  - git submodule update --init --recursive
+ - wget -q "https://s3.amazonaws.com/ci-build-test/ahmedkhalaf/CI-Test2/41/41.1/out/riscv-tools-ethernet-v0.5.zip"
 
 # Execute the build
 install:
+# steps not needed because of incremental build are commented
  - git clone -b $BRANCH_N $REPO $BRANCH_N
  - cd $BRANCH_N
- - git submodule update --init
- - cd riscv-tools
  - git submodule update --init --recursive
- - bash build.sh
-# - mkdir -p $RISCV
-# - git clone -b $BRANCH_N $REPO $RISCV
+ - bash set_env.sh
+ - unzip ../riscv-tools-*.zip -d $RISCV > $TRAVIS_BUILD_DIR/out/unzip_riscv-tools.txt
+ - cd riscv-tools
+ - cd riscv-gnu-toolchain
+ - cd build
+ - ../configure --prefix=$RISCV 
+ - make linux -j
+ - cd ../..
 
 #script:
  # Build RTL simulation
@@ -60,6 +66,4 @@ install:
 #- docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
 
 script:
- - mkdir -p $TRAVIS_BUILD_DIR/out
- - cd $RISCV
- - zip -r ../out/riscv-tools-$BRANCH_N.zip ./*
+ - zip -r ../out/lowRISC-make-linux-$BRANCH_N.zip ./*  > $TRAVIS_BUILD_DIR/out/zip_lowRISC-make-linux-$BRANCH_N.txt
